Issue #37 - WIP to include the Cropper control

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -458,3 +458,59 @@ a:hover {
 .group-label {
 
 }
+/******************************/
+/* --- Cropper for Images --- */
+/******************************/
+.crop-modal-box {
+  position: fixed;
+  width: 100%;
+  max-width: 100%;
+  max-height: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0, 0.8);
+  top: 0px;
+  left: 0px;
+  bottom: 0px;
+  align-items: center;
+  justify-content: center;
+  z-index: 2;
+}
+
+.crop-modal-wrapper {
+  display: flex;
+  flex-flow: column;
+  width: 80%;
+  height: 80%;
+  margin: 5% 10%;
+}
+
+.crop-modal-header {
+  flex: 2;
+  background: grey;
+}
+.crop-modal-footer {
+  flex: 7;
+  background: violet;
+}
+.crop-modal-right {
+  background: aliceblue;
+  flex: 1;
+}
+.crop-modal-main {
+  flex: 16;
+  background: olive;
+  display: flex;
+  flex-flow: row;
+  max-height: 80%;
+}
+.crop-modal-container {
+  flex: 4;
+  background: red;
+}
+
+.crop-modal-container img {
+  height: auto;
+  width: auto;
+  max-width:100%;
+  max-height: 100%;
+}
